# quanto

./: AAL.csv  CMakeCache.txt  CMakeLists.txt  Import.cpp  Import.h  Makefile  README.md  Stats.cpp  Stats.h  Stock.cpp  Stock.h  Utils.cpp  Utils.h  Wrapper.cpp  cmake_install.cmake  model.py  run  run.cpp  wrapper.py  yves_model.py
