cmake_minimum_required(VERSION 3.13.4)
project (run)
set(CMAKE_CXX_STANDARD 17)
find_package(Boost 1.68.0)
find_package(CURL)
if (Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS} ${CURL_INCLUDE_DIR})
    add_executable(run run.cpp Stock.cpp Utils.cpp Stats.cpp)
    target_link_libraries(run ${CURL_LIBRARIES})
endif()
